ready to do a quick merge

--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -1,5 +1,5 @@
 <!-- views/invoices/index.erb -->
-<h1>All Invoices</h1>
+<h1>Invoices</h1>
 
 <% @invoices.each do |invoice| %>
 <h3><a href="/invoices/<%= invoice.id %>"><%= invoice.id %></a></h3>
