--- a/app/public/main.css
+++ b/app/public/main.css
@@ -52,9 +52,28 @@ a img {
   border: none;
 }
 /* END RESET*/
-
-/* GLOBAL STYLES */
-
 .nav {
-  color: blue;
+  margin: 5px;
+  padding: 5px;
+  border: solid;
+}
+
+.button-shadow {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5), 0 6px 20px 0 rgba(0,0,0,0.5);
+}
+.header-title {
+  font-size: 40px;
+}
+
+.header {
+  text-align: center;
+  background-color: #f0f0f5;
+  margin: 5px 5px 0 5px;
+  border: solid;
+  padding: 10px;
+}
+
+.merchant-display {
+  border: solid;
+  margin-top: 0 5px 5px 5px;
 }
