Adding in the seeds along with testing merchant id

--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -22,7 +22,8 @@
   </div>
   <div class="header">
       <h1 class ="header-title">Merchants</h1>
-      <button type="button" class="btn btn-secondary button-shadow">Create a New Merchant</button>
+      <a href='/merchants/new' class="btn btn-secondary button-shadow" role="button">Create a New Merchant</a>
+      <a href='/merchants-dashboard'
   </div>
 
   <div class="merchant-display">
