got invoice seeding to work

--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -1,12 +1,49 @@
-<!-- views/invoices/index.erb -->
-<h1>Invoices</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    >
+    <link rel="stylesheet" type="text/css" href="../../../main.css">
 
-<% @invoices.each do |invoice| %>
-<h3><a href="/invoices/<%= invoice.id %>"><%= invoice.id %></a></h3>
-<p><%= invoice.merchant_id %></p>
-<a href="/invoices/<%= invoice.id %>/edit">Edit</a>
-<form action="/invoices/<%= invoice.id %>" method="POST">
-  <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="delete"/>
-</form>
-<% end %>
+    <meta charset="utf-8">
+    <title>Invoices</title>
+  </head>
+  <body>
+    <div class="row nav">
+      <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
+        <h1>Little Shop</h1>
+      </div>
+
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+        Merchants
+      </div>
+
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+        Items
+      </div>
+
+      <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+        Invoices
+      </div>
+    </div>
+
+    <div class="header">
+      <h1 class ="header-title">Invoices</h1>
+      <button type="button" class="btn btn-secondary button-shadow">Create Invoice</button>
+    </div>
+
+    <div class="invoice-display"
+      <% @invoices.each do |invoice| %>
+        <h3><a href="/invoices/<%= invoice.id %>"><%= invoice.id %></a></h3>
+        <button type="button" class="btn btn-warning button">Edit</button>
+        <button type="submit" class = "btn btn-warning button">Delete</button>
+      <% end %>
+    </div>
+
+
+</body>
+</html>
