--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -1,5 +1,8 @@
 <!-- views/items/index.erb -->
 <h1>Items</h1>
+<form action='/items/new'>
+   <input type='submit' value='Create a new item'/>
+</form>
     <% @items.each do |item| %>
     <ul>
       <li><%= item.title %></li>
