--- a/app/public/main.css
+++ b/app/public/main.css
@@ -53,15 +53,54 @@ a img {
 }
 /* END RESET*/
 
+input {
+  background-color: red;
+  border-radius: 12px;
+}
+
+a.button {
+  border: none;
+  border-radius: 12px;
+  background-color: blue;
+  display: inline-block;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5), 0 6px 20px 0 rgba(0,0,0,0.5);
+  border: 2px solid;
+}
+
+.merchant-header {
+  float: left;
+}
+
+.header-links {
+  float: right;
+  padding: 0px 10px;
+}
+
+.merchant-display {
+  display: inline-block;
+  margin: auto;
+  width: 500px;
+  text-align: center;
+  border: solid;
+  padding: auto;
+  width: 50%;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
 .nav {
   margin: 5px;
   padding: 5px;
   border: solid;
 }
 
-.button-shadow {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5), 0 6px 20px 0 rgba(0,0,0,0.5);
-}
 .header-title {
   font-size: 40px;
 }
@@ -69,13 +108,13 @@ a img {
 .header {
   text-align: center;
   background-color: #f0f0f5;
-  margin: 5px 5px 0 5px;
+  margin: 10px;
   border: solid;
-  padding: 10px;
+  padding: 20px;
 }
 
 .invoice-display {
   border: solid;
-  margin: 5px 5px 5px 5px;
-  padding: 5px 5px 5px 5px;
+  margin: 5px;
+  padding: 5px;
 }
