--- a/app/public/main.css
+++ b/app/public/main.css
@@ -59,6 +59,7 @@ input {
 }
 
 a.button {
+  color: white;
   border: none;
   border-radius: 12px;
   background-color: blue;
@@ -69,6 +70,16 @@ a.button {
   font-size: 16px;
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5), 0 6px 20px 0 rgba(0,0,0,0.5);
   border: 2px solid;
+}
+
+a:hover {
+    color: hotpink;
+    text-decoration-line: underline;
+}
+
+a:link {
+    color: purple;
+    text-decoration: none;
 }
 
 .merchant-header {
