--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -1,1 +1,6 @@
-<h1>Hello World!</h1>
+<form action="/merchants/<%= @merchant.id %>" method="post">
+  <h1>Edit</h1>
+  <input type="hidden" name="_method" value="PUT">
+  <input type="text" name="merchant[name]" value= "<%= @merchant.name %>"/><br/>
+  <input type= 'submit'/>
+</form>
