--- a/app/views/invoices/show.erb
+++ b/app/views/invoices/show.erb
@@ -40,8 +40,11 @@
 
     <div class="invoice-display">
       <% invoice = Invoice.find(params[:id]) %>
+      <li> Invoice ID: <%= invoice[:id] %> </li>
       <li> Merchant ID: <%= invoice[:merchant_id] %> </li>
       <li> Status: <%= invoice[:status] %> </li>
+      <button type="button" class="btn btn-warning button">Edit</button>
+      <button type="submit" class="btn btn-warning button">Delete</button>
     </div>
 
 </body>
