--- a/app/public/main.css
+++ b/app/public/main.css
@@ -81,6 +81,20 @@ a img {
 }
 
 .invoice-display li {
+  width: 75%;
+  margin: auto;
   padding: 2px 5px;
   display: inline-block;
+}
+
+li.invoice-id {
+  width: 500px;
+}
+
+li.status {
+  width: 100px;
+}
+
+li.buttons {
+  float: right;
 }
