Add dashboard link.

--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -1,5 +1,6 @@
 <!-- views/items/index.erb -->
 <h1>Items</h1>
+<a href='/items/dashboard'>Dashboard</a>
 <a href='/items/new'>Create A New Item</a>
     <% @items.each do |item| %>
     <ul>
