Add item attributes to show.erb, delete unnecessary local variables from tests.

--- a/app/views/items/show.erb
+++ b/app/views/items/show.erb
@@ -1,3 +1,6 @@
 <h1><%= @item.title %></h1>
 <a href='/items/<%= @item.id %>/edit'>Edit</a>
 <a href='/items'>Delete</a>
+<%= @item.title %>
+<%= @item.price %>
+<%= @item.description %>
