--- a/app/views/invoices/index.erb
+++ b/app/views/invoices/index.erb
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    >
-    <link rel="stylesheet" type="text/css" href="../../../main.css">
 
+  <head>
+    <link rel="stylesheet" href="">
+    <link rel="stylesheet" type="text/css" href="../../../main.css">
     <meta charset="utf-8">
     <title>Invoices</title>
   </head>
+  
   <body>
     <div class="row nav">
       <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9">
