--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -3,24 +3,7 @@
   <link rel="stylesheet" type="text/css" href="../../../main.css">
 </head>
 <body>
-  <div class="nav">
-    <div class="merchant-header">
-      <h1>Little Shop</h1>
-    </div>
-
-    <div class="header-links">
-      <a href='/merchants'>Merchants</a>
-    </div>
-
-    <div class="header-links">
-      <a href='/items'>Items</a>
-    </div>
-
-    <div class="header-links">
-      <a href='/invoices'>Invoices</a>
-    </div>
-  </div>
-
+  <%= erb :navigation %>
   <div class="header">
       <h1 class ="header-title">Create a New Merchant!</h1>
 
