--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -3,23 +3,8 @@
   <link rel="stylesheet" type="text/css" href="../../../main.css">
 </head>
 <body>
-    <div class="nav">
-      <div class="merchant-header">
-        <h1>Little Shop</h1>
-      </div>
+  <%= erb :navigation %>
 
-      <div class="header-links">
-        <a href='/merchants'>Merchants</a>
-      </div>
-
-      <div class="header-links">
-        <a href='/items'>Items</a>
-      </div>
-
-      <div class="header-links">
-        <a href='/invoices'>Invoices</a>
-      </div>
-    </div>
   <form action="/merchants/<%= @merchant.id %>" method="post">
     <h1>Edit</h1>
     <input type="hidden" name="_method" value="PUT">
