--- a/app/views/navigation.erb
+++ b/app/views/navigation.erb
@@ -1,10 +1,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../../navigation.css">
 </head>
-<body>
+<body class="hero-home">
   <div class="nav">
     <button class="dropbtn">Little Shop</button>
-
 
   <div class="dropdown">
       <button class="dropbtn">Merchants</button>
