--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,7 +1,17 @@
-<h1>Little Shop</h1>
-
-<ul>
-  <li><a href="/merchants">Merchants Index</a></li>
-  <li><a href="/invoices">Invoice Index</a></li>
-  <li><a href="/items">Item Index</a></li>
-</ul>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="../../../navigation.css">
+  <link rel="stylesheet" type="text/css" href="../../../main.css">
+  <title>Little Shop</title>
+</head>
+<body>
+  <div class="home-hero">
+  <%= erb :navigation %>
+    <ul>
+      <li><a href="/merchants">Merchants Index</a></li>
+      <li><a href="/invoices">Invoice Index</a></li>
+      <li><a href="/items">Item Index</a></li>
+    </ul>
+  </div>
+</body>
+</html>
