--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -1,6 +1,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../../reset.css">
   <link rel="stylesheet" type="text/css" href="../../../main.css">
+  <title>Edit a Merchant</title>
 </head>
 <body>
   <%= erb :navigation %>
