--- a/app/views/items/show.erb
+++ b/app/views/items/show.erb
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="">
     <link rel="stylesheet" type="text/css" href="../../../main.css">
     <meta charset="utf-8">
-    <title>Items</title>
+    <title>%= @item.title %></title>
   </head>
 
   <body>
