--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -4,14 +4,12 @@
   <link rel="stylesheet" type="text/css" href="../../../main.css">
   <title>Little Shop</title>
 </head>
-<body>
-  <div class="home-hero">
+<body class="home-hero">
   <%= erb :navigation %>
     <ul>
       <li><a href="/merchants">Merchants Index</a></li>
       <li><a href="/invoices">Invoice Index</a></li>
       <li><a href="/items">Item Index</a></li>
     </ul>
-  </div>
 </body>
 </html>
