--- a/app/views/navigation.erb
+++ b/app/views/navigation.erb
@@ -1,9 +1,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../../navigation.css">
 </head>
-<body class="hero-home">
+<body>
   <div class="nav">
-    <button class="dropbtn">Little Shop</button>
+    <a href="/"><button class="dropbtn">Little Shop</button></a>
 
   <div class="dropdown">
       <button class="dropbtn">Merchants</button>
