--- a/app/public/main.css
+++ b/app/public/main.css
@@ -1,22 +1,4 @@
-.home-hero {
-  background-image: url(/images/cotton_candy.jpeg);
-}
-
-.submit-button {
-  background-color: yellow;
-  border-radius: 12px;
-}
-
-.edit-button {
-  background-color: yellow;
-  float: right;
-}
-
-.delete-button {
-  background-color: red;
-  float: right;
-}
-
+/* BUTTON STYLES */
 a.button {
   color: white;
   border: none;
@@ -31,33 +13,28 @@ a.button {
   border: 2px solid;
 }
 
+.submit-button {
+  background-color: yellow;
+  border-radius: 12px;
+}
+
+.edit-button {
+  background-color: yellow;
+  float: right;
+  margin: 5px;
+}
+
+.delete-button {
+  background-color: red;
+  float: right;
+  margin: 5px;
+}
+
 a:hover {
     background-color: hotpink;
 }
 
-.merchant-display {
-  display: inline-block;
-  margin: auto;
-  width: 500px;
-  text-align: center;
-  border: solid;
-  padding: auto;
-  width: 50%;
-}
-
-.merchant-header {
-  float: left;
-}
-
-.flex-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.introduction {
-  font-size: 50px;
-}
-
+/* HEADER STYLES */
 .header-title {
   font-size: 40px;
 }
@@ -65,11 +42,16 @@ a:hover {
 .header {
   text-align: center;
   background-color: #f0f0f5;
-  margin: 10px;
+  margin: auto;
   border: solid;
   padding: 20px;
 }
 
+.show-header {
+  font-size: 50px;
+}
+
+/* INVOICE STYLES */
 .invoice-display {
   border: solid;
   margin: 5px;
@@ -83,6 +65,10 @@ a:hover {
   display: inline-block;
 }
 
+li.buttons {
+  float: right;
+}
+
 li.invoice-id {
   width: 500px;
 }
@@ -91,6 +77,7 @@ li.status {
   width: 100px;
 }
 
-li.buttons {
-  float: right;
+/* MERCHANT STYLES */
+.index-display {
+  border: 1px solid;
 }
