--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <link rel="stylesheet" href="">
     <link rel="stylesheet" type="text/css" href="../../../main.css">
@@ -9,16 +8,17 @@
   </head>
 
   <body>
-
-    <h1>Items</h1>
-    <a href='/items/dashboard'>Dashboard</a>
-    <a href='/items/new'>Create A New Item</a>
-        <% @items.each do |item| %>
-          <a href='/items/<%= item.id %>'><%= item.title %></a>
-          <%= item.description %>
-          <%= item.price %>
-          <%= item.image %>
-        <% end %>
+    <header class="header">
+      <h1 class="header-title">Items</h1>
+      <a href='/items/dashboard'>Dashboard</a>
+      <a href='/items/new'>Create A New Item</a>
+    </header>
+      <ul><% @items.each do |item| %>
+        <li><a href='/items/<%= item.id %>'><%= item.title %></a></li>
+        <li><%= item.description %></li>
+        <li><%= item.price %></li>
+        <li><%= item.image %></li>
+      <% end %></ul>
   </body>
 
 </html>
