--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -8,26 +8,22 @@
   </head>
 
   <body>
-    <h1>Create New Item</h1>
-    <p>Title</p>
+    <header class="header">
+      <h1>Create New Item</h1>
+    </header>
+
     <form action="/items" method="post">
+      <p>Title</p>
       <input type="text" name="item[title]" value="New Title Here">
-      <input class="submit-button" type="submit">
-    </form>
-    <p>Price</p>
-    <form action="/items" method="post">
+      <p>Price</p>
       <input type="text" name="item[price]" value="New Price Here">
-      <input class="submit-button" type="submit">
-    </form>
-    <p>Description</p>
-    <form action="/items" method="post">
+      <p>Description</p>
       <input type="text" name="item[description]" value="New Description Here">
-      <input class="submit-button" type="submit">
-    </form>
-    <p>Image URL</p>
-    <form action="/items" method="post">
+      <p>Image URL</p>
       <input type="text" name="item[image]" value="www.example.com/image.jpg">
-      <input class="submit-button" type="submit">
     </form>
+    <a href="/items">Cancel</a>
+    <a href="/items">Create Item</a>
   </body>
+
 </html>
