Lots of things.

--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -17,7 +17,7 @@
         <li><a href='/items/<%= item.id %>'><%= item.title %></a></li>
         <li><%= item.description %></li>
         <li><%= item.price %></li>
-        <li><%= item.image %></li>
+        <li><img src="<%= item.image %>" alt="Cotton Candy"</li>
       <% end %></ul>
   </body>
 
