Add edit item title test.

--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -22,10 +22,10 @@
       <input type="text" name="item[title]" value="New Title Here">
       <p>Price</p>
       <input type="text" name="item[price]" value="New Price Here">
-      <p>Description</p>
-      <input type="text" name="item[description]" value="New Description Here">
       <p>Image URL</p>
-      <input type="text" name="item[image]" value="www.example.com/image.jpg"><br/>
+      <input type="text" name="item[image]" value="www.example.com/image.jpg">
+      <p>Description</p>
+      <input type="text" name="item[description]" value="New Description Here"><br/>
       <a href="/items">Cancel</a>
       <a href="/items">Create Item</a>
     </form>
