Commit before merge.

--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -8,6 +8,8 @@
   </head>
 
   <body>
+    <%= erb :navigation %>
+
     <header class="header">
       <a href='/items/dashboard'>Dashboard</a>
       <h1 class="header-title">Items</h1>
