--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -14,6 +14,7 @@
     </header>
 
     <form action="/items" method="post">
+      <input type="hidden" name="_method" value="PUT">
       <p>Merchant</p>
       <select name="Merchants"><% @merchants.each do |merchant| %>
           <option value="merchant"><%= merchant.name %></option>
@@ -28,7 +29,7 @@
       <p>Description</p>
       <input type="text" name="item[description]" value="New Description Here"><br/>
       <a href="/items">Cancel</a>
-      <a href="/items">Update Item</a>
+      <input class="submit-button" type="submit" value="Update Item">
     </form>
   </body>
 </html>
