--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -23,13 +23,13 @@
       <p>Title</p>
       <input type="text" name="item[title]" value="New Title Here">
       <p>Price</p>
-      <input type="text" name="item[price]" value="New Price Here">
+      <input type="number" name="item[price]" value="New Price Here">
       <p>Image URL</p>
-      <input type="text" name="item[image]" value="www.example.com/image.jpg">
+      <input type="url" name="item[image]" value="www.example.com/image.jpg">
       <p>Description</p>
       <input type="text" name="item[description]" value="New Description Here"><br/>
       <a href="/items">Cancel</a>
-      <a href="/items">Create Item</a>
+      <input class="submit-button" type="submit" value="Create Item">
     </form>
   </body>
 
