--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -1,26 +1,13 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" type="text/css" href="../../../main.css">
-    <meta charset="utf-8">
-    <title>Items</title>
-  </head>
+<header class="header">
+  <a href='/items/dashboard'>Dashboard</a>
+  <h1 class="header-title">Items</h1>
+  <a href='/items/new'>Create A New Item</a>
+</header>
 
-  <body>
-    <%= erb :navigation %>
-
-    <header class="header">
-      <a href='/items/dashboard'>Dashboard</a>
-      <h1 class="header-title">Items</h1>
-      <a href='/items/new'>Create A New Item</a>
-    </header>
-      <ul><% @items.each do |item| %>
-        <li><a href='/items/<%= item.id %>'><%= item.title %></a></li>
-        <li><%= item.description %></li>
-        <li><%= item.price %></li>
-        <li><img src="<%= item.image %>" alt="Cotton Candy"</li>
-      <% end %></ul>
-  </body>
-
-</html>
+<ul><% @items.each do |item| %>
+  <li><a href='/items/<%= item.id %>'><%= item.title %></a></li>
+  <li><%= item.description %></li>
+  <li><%= item.price %></li>
+  <li><img src="<%= item.image %>" alt="Cotton Candy"</li>
+  <% end %>
+</ul>
