--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <link rel="stylesheet" type="text/css" href="../../../main.css">
+    <meta charset="utf-8">
+    <title>Little Shop</title>
   </head>
 
   <body>
+    <%= erb :navigation %>
     <%= yield %>
   </body>
 </html>
