Add background to nav banner.

--- a/app/public/navigation.css
+++ b/app/public/navigation.css
@@ -56,4 +56,5 @@ a {
   margin: 5px;
   padding: 5px;
   border: solid;
+  background-image: url(https://mobile-cuisine.com/wp-content/uploads/2012/12/Cotton-Candy-e1444165061821.jpg);
 }
