Change hovering and add link to new item in nav.

--- a/app/views/navigation.erb
+++ b/app/views/navigation.erb
@@ -17,6 +17,7 @@
         <button class="dropbtn">Items</button>
         <div class="dropdown-links">
             <a href="/items">Item Index</a>
+            <a href="/items/new">Create a New Item</a>
         </div>
     </div>
 
