--- a/app/public/merchant_dashboard.css
+++ b/app/public/merchant_dashboard.css
@@ -15,4 +15,8 @@
   border: solid;
   margin: 10px 20px;
   padding: 20px;
+  border-bottom: 1px solid #ddd;
+}
+.table-data {
+  border-bottom: 1px solid #ddd;
 }
