--- a/app/public/main.css
+++ b/app/public/main.css
@@ -100,3 +100,19 @@ li.status {
 .dashboard-display {
   display: flex;
 }
+
+/* ITEM STYLES */
+
+.item {
+  display: flex;
+  margin: 10px;
+  width: 20%;
+  text-align: center;
+  border: solid;
+  flex: auto;
+  flex-direction: row;
+}
+
+.link {
+  text-decoration-line: underline;
+}
