--- a/app/views/items/show.erb
+++ b/app/views/items/show.erb
@@ -1,13 +1,26 @@
-<header class="header">
-  <h1 class="header-title"><%= @item.title %></h1>
-  <a href='/items/<%= @item.id %>/edit'>Edit</a>
-  <a href='/items'>Delete</a>
-</header>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="../../../reset.css">
+    <link rel="stylesheet" type="text/css" href="../../../main.css">
+    <title>Edit Item</title>
+  </head>
 
-<ul>
-  <li><a href="/merchants/<%= @item.merchant_id %>"><%= @merchants.find(@item.merchant_id).name %></a></li>
-  <li><img src="<%= @item.image %>" alt="Cotton Candy"></li>
-  <li><%= @item.title %></li>
-  <li>$<%= @item.price.to_f / 100 %></li>
-  <li><%= @item.description %></li>
-</ul>
+  <body>
+      <%= erb :navigation %>
+
+    <header class="header">
+      <h1 class="header-title"><%= @item.title %></h1>
+      <a href='/items/<%= @item.id %>/edit'>Edit</a>
+      <a href='/items'>Delete</a>
+    </header>
+
+    <ul>
+      <li><a href="/merchants/<%= @item.merchant_id %>"><%= @merchants.find(@item.merchant_id).name %></a></li>
+      <li><img src="<%= @item.image %>" alt="Cotton Candy"></li>
+      <li><%= @item.title %></li>
+      <li>$<%= @item.price.to_f / 100 %></li>
+      <li><%= @item.description %></li>
+    </ul>
+  </body>
+</html>
