--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,7 +1,6 @@
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../../../navigation.css">
-  <link rel="stylesheet" type="text/css" href="../../../main.css">
+  <link rel="stylesheet" type="text/css" href="../../../dashboard.css">
   <title>Little Shop</title>
 </head>
 <body class="home-hero">
